app/assets/sass/application.scss
// global styles for <a> and <p> tags
$govuk-global-styles: true;

// We can't mount GOV.UK Frontend's assets at root as it's done automatically by the extensions framework.
$govuk-assets-path: '/govuk/assets/';

// Import GOV.UK Frontend and any extension styles if extensions have been configured
@import "lib/extensions/extensions";

// Patterns that aren't in Frontend
@import "patterns/step-by-step-navigation";
@import "patterns/task-list";
@import "patterns/related-items";

// Components that aren't in Frontend
@import "components/cookie-banner";
@import "components/search-box";
@import "components/filters";
@import "components/left-nav";

// Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you

    /*overwrite style*/

// .blue-background {
//     background-color: $govuk-brand-colour;
// }
    
    .govuk-width-container-full {
        max-width: 100%;
    }
   @media (min-width: 1020px) {
    
    .govuk-width-container-full {
      margin: 0 30px;
    }
   }



.white-text {
    color: govuk-colour("white");
}

#resultsContainer {
    margin-top: 20px;
    display: flex;
    flex-direction: row;
}

#resultList {

    li {
        margin-bottom: 50px;

        

            .funding-stream-list span {
                margin-bottom: 5px;
            }
        
    }

    .no-underline {
        text-decoration: none;

        &:hover {
            text-decoration: underline;
        }
    }

}



#resultList ul.custom {
    li {
        margin-bottom: 0px;
    }   
}

// FOR MOBILE AND DESKTOP // 
.flex {
    display: flex;
    // flex-direction: column
}

.flex-mob {
    display: flex
}

.flex-col {
    display: flex;
    flex-direction: column;
}

.flex-1 {
    flex: 1
}

.flex-09 {
    flex: 0.9;
}

.space-between {
    justify-content: space-between;
}


.colour-black {
    color: black;
}

.results-number-container {
    background-color: #f8f8f8;
    padding-top: 15px;
    padding-bottom: 15px;
    padding-left: 5px;
}


.results-elements {
    color: black !important;
    border: 1px solid black;
    padding: 7px;
    border-radius: 6px;
    position: relative;
    padding-left: 30px;
    margin-right: 10px;
    text-decoration: none;
    background-color: #f8f8f8;

    &:visited {
        color: black;
    }

    .close {
        position: absolute;
        
    }

    .close:before, .close:after {
        position: absolute;
        left: -15px;
        top: 2px;
        content: ' ';
        height: 17px;
        width: 2px;
        background-color: #333;
      }
      .close:before {
        transform: rotate(45deg);
      }
      .close:after {
        transform: rotate(-45deg);
      }

      &:hover {
            color: white !important;
            background-color: black;
            
            .close:before {
                background-color: white;
            }
            .close:after {
                background-color: white;
            }
        }

        &:focus {
            box-shadow: 0 0px #ffdd00, 0 4px #0b0c0c;
            color: black !important;
            background-color: $govuk-focus-colour;
            
            .close:before {
                background-color: black;
            }
            .close:after {
                background-color: black;
            }
        }
}

.filter-feedback-container {
    @extend .results-number-container;
    display: none;
    padding-top: 0;
    padding-bottom: 10px;
    
}

.filter-feedback {
    @extend .results-elements;
    display: inline-block;
    margin-top: 10px;
}

.visually-hidden, .visually-hidden2, .visually-hidden3  {
    position:absolute;
    left:-10000px;
    top:auto;
    width:1px;
    height:1px;
    overflow:hidden;
}

.loading-spinner {
    display: flex;
    justify-content: space-around;
}

.custom-width-280 {
    width: 280px;
}

.aims-list {
    span {
        margin-bottom: 10px;
    }

    margin-bottom: 0;
}

@include govuk-media-query($from: tablet) {
    .flex {
        flex-direction: row;
    }

    #resultsContainer {
        margin-top: 0;
    }
}


.fc-body-list {
    .fc-body-list-item {
        margin-bottom: 10px;
    }
}

@include govuk-media-query($from: tablet) {

    .white-side-bar {
        background-color: white;
        margin-top: -300px;
        padding: 15px;

        li {
            margin-bottom: 10px;
        }
    }

}


#high-level-info {
    .govuk-table__header, .govuk-table__cell {
        border-bottom: 0;
        padding-bottom: 5px;
    }

    padding-bottom: 10px;
}

.academic-year-wrapper {
    float: right;
    margin-top: 8px;
}

.two-thirds-width {

    .govuk-table__header, .govuk-table__cell {
        border-bottom: 0;
        padding-bottom: 5px;
    }

}

@include govuk-media-query($from: tablet) {

    .two-thirds-width {

        padding-bottom: 10px;
        width: 66%;
    }

    #applyChangesButton {
        width: 50%;
        margin-bottom: 0;
    }

}

.flex-05 {
    flex: .5;
}

.flex-1 {
    flex: 1;
}

.flex-2 {
    flex: 2;
}

.flex-4 {
    flex: 0.4;
}

.flex-6 {
    flex: 0.6;
}

.flex-7 {
    flex: 0.7;
}

#typeOfLearning {
    
    margin-right: 20px;

    #learning {
        height: 2.4rem;
        width: 100%;
        
    }

    #learning-no-js {
        @extend #learning;
    }
}

#learning {
    height: 2.6rem;
    // margin-left: 10px;
    // margin-right: 10px;
}

#learning-no-js {
    @extend #learning;
}

// #learningLabel {
//     margin-top: 44px;
// }

#yearHome {
    width: 100%;
}

.no-results-message {
    display: none;
}

.margin-right-20 {
    margin-right: 20px;
}

.previous-link-arrow {
    margin-right: 10px;
}

.next-link-arrow {
    margin-left: 10px;
}

.text-align-right {
    text-align: right;
}

.text-align-centre {
    text-align: center;
}

#hiddenRelatedItems {
    display: none;
}

.govuk-list.custom-spacing {
    li {
        
            margin-bottom: 10px;
       
    }
}

.no-underline {
    text-decoration: none;

    &:hover {
        text-decoration: underline;
    }
}



.half-width {
    width: 50%;
}

.width-70 {
    width: 75%;
}

.inactive-link {
    text-decoration: none !important;
    color: black !important;
    font-weight: 700 !important;
    pointer-events: none;
    cursor: default;
}

.govuk-summary-list__row {
    margin-bottom: -10px;
    border-bottom: 0;
    display: flex;

    .mob-row {
        display: flex;
        margin-right: 40px;
        margin-top: 5px
    }

    .govuk-summary-list__key {
        margin-right: 10px;
    }
    
    .govuk-summary-list__value.custom {
        margin-right: 30px;
    }
}

.custom-row {
    display: table-row;
}

#ldns-width {
    width: 50%;
}

@include govuk-media-query($from: tablet) {

    .search-item {
        .govuk-summary-list__row, dt, dd {
            border-bottom: 0;
        }
    
        .govuk-summary-list__key {
            width: 80%;
        }
    
        .custom-width {
            width: 80%;
        }

        .govuk-summary-list__key, .govuk-summary-list__value {
            padding-bottom: 0;
        }
    
        .govuk-summary-list__key.custom {
            width: auto;
        }
    }

    .govuk-summary-list__row {

        margin-bottom: auto;

        .mob-row {
            display: contents;
        }

    }

    #ldns-width {
        width: 30%;
    }
}

#qualificationDetails {
    dt, dd {
        border-bottom: 0;
    }
}

